# web-prodject

./: :wq  Dockerfile  PRIVACY.md  ProjectNebulus.ini  README.md  about.md  babel.cfg  blog.html  layout.html  main.py  messages.pot  package-lock.json  package.json  pyproject.toml  requirements.txt  scheduler.html  schedulercss.css  school_db.xlsx  support.html  tailwind.config.js  upgrade.html  vacation.html  wsgi.py
chat/: chat.html  email.html
connections/: connectCanvas.html  connectClassroom.html  connectDiscord.html  connectSchoology.html  connectSpotify.html
courses/: announcements.html  course.html  courseModals.html  documents.html  extensions.html  grades.html  information.html  learning.html  settings.html  sidebar.html  textbook.html
css/: extra_classes.css  fonts.css  lms.css  ptable.css  tailwind.css  utils.css
developers_api/: dev_portal.html
errors/: 404.html  500.html  coming_soon.html  offline.html  soon.html
flowbite/: README.md  package.json  plugin.js  postcss.config.js  tailwind.config.js  webpack.config.js
js/: chat.js  lms.js  music.js  ptable.js  sw.js
json/: cache.json  festive-freedom-309323-0124a1c976ae.json
learning/: learning.html  lms-modal.html
main/: about.html  index.html  pricing.html  reset.html  signin-bg.html  signin.html  signup.html
music/: music.html  music_image_results.html  music_results.html  spotify_preview.html  youtube_preview.html
routes/: __init__.py
tools/: calendar.html  docs.html  files.html  notepad.html  planner.html  study.html
user/: dashboard.html  points.html  profile.html  (+1 more)
(+138 files in other folders)
