[tool.poetry]
name = "projectnebulus"
version = "0.1.0"
description = "Learning, all in one"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
bs4 = "^0.0.1"
canvasapi = "^2.2.0"
certifi = "^2022.6.15"
colorthief = "^0.2.1"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
Flask-Discord = "^0.1.69"
Flask-Mail = "^0.9.1"
Flask-SocketIO = "^5.2.0"
google = "^3.0.0"
google-auth-oauthlib = "^0.5.2"
httplib2 = "^0.20.4"
Jinja2 = "^3.1.2"
mechanize = "^0.4.8"
mongoengine = "^0.24.1"
musixmatch = "^0.9"
nltk = "^3.7"
numpy = "^1.23.0"
plotly = "^5.9.0"
requests = "^2.28.0"
schoolopy = "^0.2.2"
spotipy = "^2.20.0"
thefuzz = "^0.19.0"
Werkzeug = "^2.1.2"
youtube_dl = "^2021.12.17"
zoomus = "^1.1.6"
Pillow = "^9.1.1"
google-api-python-client = "^2.52.0"
PyGithub = "^1.55"
scipy = "^1.8.1"
graphene = "~3.0b7"
graphene-mongo = "^0.2.14"
python-dotenv = "^0.20.0"
uWSGI = "^2.0.20"
Flask-Babel = "^2.0.0"
dnspython = "^2.2.1"
eventlet = "^0.33.1"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"